# DiceForge

./: CMakeLists.txt
include/: diceforge_distributions.h
src/Distributions/Discrete/Binomial/: Binomial.cpp  Binomial.h
tests/: CMakeLists.txt  binomial_test.cpp
tests/discrete/: bernoulli_test.cpp  binomial_test.cpp
